Fix for deprecated primitive constructor
Used the suggested alternative `valueOf` which is also supposed
to be better for performance as it caches frequently used quantities.